syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

service Dispatcher {
  rpc TestDispatch (DispatchRequest) returns (DispatchReply) {}
}

// dispatch request messages
message DispatchRequest {
  string title = 1;
}

// dispatcher response message
message DispatchReply {
  string message = 1;
}

// The request message
message HelloRequest {
  string name = 1;
}

// The response message
message HelloReply {
  string message = 1;
}
